Fix: changed text-align to left on small screen

--- a/assets/css/faqs.css
+++ b/assets/css/faqs.css
@@ -96,13 +96,10 @@ nav.navbar a.nav-link {
   cursor: pointer;
   font-size: 1.6rem;
   width: 100%;
-  padding: 2rem 2.5rem;
+  text-align: left;
   border: none;
   outline: none;
   transition: 0.4s;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   font-weight: bold;
 }
 
